src/nuklear_win32.zig

pub const enum_nk_style_header_align = c_uint;
pub const struct_nk_style_window_header = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    close_button: struct_nk_style_button,
    minimize_button: struct_nk_style_button,
    close_symbol: enum_nk_symbol_type,
    minimize_symbol: enum_nk_symbol_type,
    maximize_symbol: enum_nk_symbol_type,
    label_normal: struct_nk_color,
    label_hover: struct_nk_color,
    label_active: struct_nk_color,
    @"align": enum_nk_style_header_align,
    padding: struct_nk_vec2,
    label_padding: struct_nk_vec2,
    spacing: struct_nk_vec2,
};
pub const struct_nk_style_window = extern struct {
    header: struct_nk_style_window_header,
    fixed_background: struct_nk_style_item,
    background: struct_nk_color,
    border_color: struct_nk_color,
    popup_border_color: struct_nk_color,
    combo_border_color: struct_nk_color,
    contextual_border_color: struct_nk_color,
    menu_border_color: struct_nk_color,
    group_border_color: struct_nk_color,
    tooltip_border_color: struct_nk_color,
    scaler: struct_nk_style_item,
    border: f32,
    combo_border: f32,
    contextual_border: f32,
    menu_border: f32,
    group_border: f32,
    tooltip_border: f32,
    popup_border: f32,
    min_row_height_padding: f32,
    rounding: f32,
    spacing: struct_nk_vec2,
    scrollbar_size: struct_nk_vec2,
    min_size: struct_nk_vec2,
    padding: struct_nk_vec2,
    group_padding: struct_nk_vec2,
    popup_padding: struct_nk_vec2,
    combo_padding: struct_nk_vec2,
    contextual_padding: struct_nk_vec2,
    menu_padding: struct_nk_vec2,
    tooltip_padding: struct_nk_vec2,
};
pub const struct_nk_style = extern struct {
    font: [*c]const struct_nk_user_font,
    cursors: [7][*c]const struct_nk_cursor,
    cursor_active: [*c]const struct_nk_cursor,
    cursor_last: [*c]struct_nk_cursor,
    cursor_visible: c_int,
    text: struct_nk_style_text,
    button: struct_nk_style_button,
    contextual_button: struct_nk_style_button,
    menu_button: struct_nk_style_button,
    option: struct_nk_style_toggle,
    checkbox: struct_nk_style_toggle,
    selectable: struct_nk_style_selectable,
    slider: struct_nk_style_slider,
    progress: struct_nk_style_progress,
    property: struct_nk_style_property,
    edit: struct_nk_style_edit,
    chart: struct_nk_style_chart,
    scrollh: struct_nk_style_scrollbar,
    scrollv: struct_nk_style_scrollbar,
    tab: struct_nk_style_tab,
    combo: struct_nk_style_combo,
    window: struct_nk_style_window,
};
pub const NK_BUTTON_DEFAULT: c_int = 0;
pub const NK_BUTTON_REPEATER: c_int = 1;
pub const enum_nk_button_behavior = c_uint;
pub const struct_nk_config_stack_style_item_element = extern struct {
    address: [*c]struct_nk_style_item,
    old_value: struct_nk_style_item,
};
pub const struct_nk_config_stack_style_item = extern struct {
    head: c_int,
    elements: [16]struct_nk_config_stack_style_item_element,
};
pub const struct_nk_config_stack_float_element = extern struct {
    address: [*c]f32,
    old_value: f32,
};
pub const struct_nk_config_stack_float = extern struct {
    head: c_int,
    elements: [32]struct_nk_config_stack_float_element,
};
pub const struct_nk_config_stack_vec2_element = extern struct {
    address: [*c]struct_nk_vec2,
    old_value: struct_nk_vec2,
};
pub const struct_nk_config_stack_vec2 = extern struct {
    head: c_int,
    elements: [16]struct_nk_config_stack_vec2_element,
};
pub const struct_nk_config_stack_flags_element = extern struct {
    address: [*c]nk_flags,
    old_value: nk_flags,
};
pub const struct_nk_config_stack_flags = extern struct {
    head: c_int,
    elements: [32]struct_nk_config_stack_flags_element,
};
pub const struct_nk_config_stack_color_element = extern struct {
    address: [*c]struct_nk_color,
    old_value: struct_nk_color,
};
pub const struct_nk_config_stack_color = extern struct {
    head: c_int,
    elements: [32]struct_nk_config_stack_color_element,
};
pub const struct_nk_config_stack_user_font_element = extern struct {
    address: [*c][*c]const struct_nk_user_font,
    old_value: [*c]const struct_nk_user_font,
};
pub const struct_nk_config_stack_user_font = extern struct {
    head: c_int,
    elements: [8]struct_nk_config_stack_user_font_element,
};
pub const struct_nk_config_stack_button_behavior_element = extern struct {
    address: [*c]enum_nk_button_behavior,
    old_value: enum_nk_button_behavior,
};
pub const struct_nk_config_stack_button_behavior = extern struct {
    head: c_int,
    elements: [8]struct_nk_config_stack_button_behavior_element,
};
pub const struct_nk_configuration_stacks = extern struct {
    style_items: struct_nk_config_stack_style_item,
    floats: struct_nk_config_stack_float,
    vectors: struct_nk_config_stack_vec2,
    flags: struct_nk_config_stack_flags,
    colors: struct_nk_config_stack_color,
    fonts: struct_nk_config_stack_user_font,
    button_behaviors: struct_nk_config_stack_button_behavior,
};
pub const struct_nk_table = extern struct {
    seq: c_uint,
    size: c_uint,
    keys: [59]nk_hash,
    values: [59]nk_uint,
    next: [*c]struct_nk_table,
    prev: [*c]struct_nk_table,
};
pub const struct_nk_property_state = extern struct {
    active: c_int,
    prev: c_int,
    buffer: [64]u8,
    length: c_int,
    cursor: c_int,
    select_start: c_int,
    select_end: c_int,
    name: nk_hash,
    seq: c_uint,
    old: c_uint,
    state: c_int,
};
pub const struct_nk_popup_buffer = extern struct {
    begin: nk_size,
    parent: nk_size,
    last: nk_size,
    end: nk_size,
    active: nk_bool,
};
pub const struct_nk_popup_state = extern struct {
    win: [*c]struct_nk_window,
    type: enum_nk_panel_type,
    buf: struct_nk_popup_buffer,
    name: nk_hash,
    active: nk_bool,
    combo_count: c_uint,
    con_count: c_uint,
    con_old: c_uint,
    active_con: c_uint,
    header: struct_nk_rect,
};
pub const struct_nk_edit_state = extern struct {
    name: nk_hash,
    seq: c_uint,
    old: c_uint,
    active: c_int,
    prev: c_int,
    cursor: c_int,
    sel_start: c_int,
    sel_end: c_int,
    scrollbar: struct_nk_scroll,
    mode: u8,
    single_line: u8,
};
pub const struct_nk_window = extern struct {
    seq: c_uint,
    name: nk_hash,
    name_string: [64]u8,
    flags: nk_flags,
    bounds: struct_nk_rect,
    scrollbar: struct_nk_scroll,
    buffer: struct_nk_command_buffer,
    layout: [*c]struct_nk_panel,
    scrollbar_hiding_timer: f32,
    property: struct_nk_property_state,
    popup: struct_nk_popup_state,
    edit: struct_nk_edit_state,
    scrolled: c_uint,
    tables: [*c]struct_nk_table,
    table_count: c_uint,
    next: [*c]struct_nk_window,
    prev: [*c]struct_nk_window,
    parent: [*c]struct_nk_window,
};
pub const union_nk_page_data = extern union {
    tbl: struct_nk_table,
    pan: struct_nk_panel,
    win: struct_nk_window,
};
pub const struct_nk_page_element = extern struct {
    data: union_nk_page_data,
    next: [*c]struct_nk_page_element,
    prev: [*c]struct_nk_page_element,
};
pub const struct_nk_page = extern struct {
    size: c_uint,
    next: [*c]struct_nk_page,
    win: [1]struct_nk_page_element,
};
pub const struct_nk_pool = extern struct {
    alloc: struct_nk_allocator,
    type: enum_nk_allocation_type,
    page_count: c_uint,
    pages: [*c]struct_nk_page,
    freelist: [*c]struct_nk_page_element,
    capacity: c_uint,
    size: nk_size,
    cap: nk_size,
};
pub const struct_nk_context = extern struct {
    input: struct_nk_input,
    style: struct_nk_style,
    memory: struct_nk_buffer,
    clip: struct_nk_clipboard,
    last_widget_state: nk_flags,
    button_behavior: enum_nk_button_behavior,
    stacks: struct_nk_configuration_stacks,
    delta_time_seconds: f32,
    draw_list: struct_nk_draw_list,
    text_edit: struct_nk_text_edit,
    overlay: struct_nk_command_buffer,
    build: c_int,
    use_pool: c_int,
    pool: struct_nk_pool,
    begin: [*c]struct_nk_window,
    end: [*c]struct_nk_window,
    active: [*c]struct_nk_window,
    current: [*c]struct_nk_window,
    freelist: [*c]struct_nk_page_element,
    count: c_uint,
    seq: c_uint,
};
pub const struct_nk_style_slide = opaque {};
pub const nk_false: c_int = 0;
pub const nk_true: c_int = 1;
const enum_unnamed_1 = c_uint;
pub const struct_nk_colorf = extern struct {
    r: f32,
    g: f32,
    b: f32,
    a: f32,
};
pub const struct_nk_vec2i = extern struct {
    x: c_short,
    y: c_short,
};
pub const struct_nk_recti = extern struct {
    x: c_short,
    y: c_short,
    w: c_short,
    h: c_short,
};
pub const nk_glyph = [4]u8;
pub const nk_handle = extern union {
    ptr: ?*anyopaque,
    id: c_int,
};
pub const NK_UP: c_int = 0;
pub const NK_RIGHT: c_int = 1;
pub const NK_DOWN: c_int = 2;
pub const NK_LEFT: c_int = 3;
pub const enum_nk_heading = c_uint;
pub const NK_FIXED: c_int = 0;
pub const NK_MODIFIABLE: c_int = 1;
pub const enum_nk_modify = c_uint;
pub const NK_VERTICAL: c_int = 0;
pub const NK_HORIZONTAL: c_int = 1;
pub const enum_nk_orientation = c_uint;
pub const NK_MINIMIZED: c_int = 0;
pub const NK_MAXIMIZED: c_int = 1;
pub const enum_nk_collapse_states = c_uint;
pub const NK_HIDDEN: c_int = 0;
pub const NK_SHOWN: c_int = 1;
pub const enum_nk_show_states = c_uint;
pub const NK_CHART_HOVERING: c_int = 1;
pub const NK_CHART_CLICKED: c_int = 2;
pub const enum_nk_chart_event = c_uint;
pub const NK_RGB: c_int = 0;
pub const NK_RGBA: c_int = 1;
pub const enum_nk_color_format = c_uint;
pub const NK_POPUP_STATIC: c_int = 0;
pub const NK_POPUP_DYNAMIC: c_int = 1;
pub const enum_nk_popup_type = c_uint;
pub const NK_DYNAMIC: c_int = 0;
pub const NK_STATIC: c_int = 1;
pub const enum_nk_layout_format = c_uint;
pub const NK_TREE_NODE: c_int = 0;
pub const NK_TREE_TAB: c_int = 1;
pub const enum_nk_tree_type = c_uint;
pub extern fn nk_init_fixed([*c]struct_nk_context, memory: ?*anyopaque, size: nk_size, [*c]const struct_nk_user_font) nk_bool;
pub extern fn nk_init([*c]struct_nk_context, [*c]struct_nk_allocator, [*c]const struct_nk_user_font) nk_bool;
pub extern fn nk_init_custom([*c]struct_nk_context, cmds: [*c]struct_nk_buffer, pool: [*c]struct_nk_buffer, [*c]const struct_nk_user_font) nk_bool;
pub extern fn nk_clear([*c]struct_nk_context) void;
pub extern fn nk_free([*c]struct_nk_context) void;
pub const NK_KEY_NONE: c_int = 0;
pub const NK_KEY_SHIFT: c_int = 1;
pub const NK_KEY_CTRL: c_int = 2;
pub const NK_KEY_DEL: c_int = 3;
pub const NK_KEY_ENTER: c_int = 4;
pub const NK_KEY_TAB: c_int = 5;
pub const NK_KEY_BACKSPACE: c_int = 6;
pub const NK_KEY_COPY: c_int = 7;
pub const NK_KEY_CUT: c_int = 8;
pub const NK_KEY_PASTE: c_int = 9;
pub const NK_KEY_UP: c_int = 10;
pub const NK_KEY_DOWN: c_int = 11;
pub const NK_KEY_LEFT: c_int = 12;
pub const NK_KEY_RIGHT: c_int = 13;
pub const NK_KEY_TEXT_INSERT_MODE: c_int = 14;
pub const NK_KEY_TEXT_REPLACE_MODE: c_int = 15;
pub const NK_KEY_TEXT_RESET_MODE: c_int = 16;
pub const NK_KEY_TEXT_LINE_START: c_int = 17;
pub const NK_KEY_TEXT_LINE_END: c_int = 18;
pub const NK_KEY_TEXT_START: c_int = 19;
pub const NK_KEY_TEXT_END: c_int = 20;
pub const NK_KEY_TEXT_UNDO: c_int = 21;
pub const NK_KEY_TEXT_REDO: c_int = 22;
pub const NK_KEY_TEXT_SELECT_ALL: c_int = 23;
pub const NK_KEY_TEXT_WORD_LEFT: c_int = 24;
pub const NK_KEY_TEXT_WORD_RIGHT: c_int = 25;
pub const NK_KEY_SCROLL_START: c_int = 26;
pub const NK_KEY_SCROLL_END: c_int = 27;
pub const NK_KEY_SCROLL_DOWN: c_int = 28;
pub const NK_KEY_SCROLL_UP: c_int = 29;
pub const NK_KEY_MAX: c_int = 30;
pub const enum_nk_keys = c_uint;
pub const NK_BUTTON_LEFT: c_int = 0;
pub const NK_BUTTON_MIDDLE: c_int = 1;
pub const NK_BUTTON_RIGHT: c_int = 2;
pub const NK_BUTTON_DOUBLE: c_int = 3;
pub const NK_BUTTON_MAX: c_int = 4;
pub const enum_nk_buttons = c_uint;
pub extern fn nk_input_begin([*c]struct_nk_context) void;
pub extern fn nk_input_motion([*c]struct_nk_context, x: c_int, y: c_int) void;
